# tam_intranet

./: .gitignore  Cargo.toml  README.md
src/: intranet_client.rs  lib.rs  main.rs  resources.rs  timetable.rs
tests/: timetable.rs
