cargo-features = ["codegen-backend"]

[package]
name = "tam_intranet"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
chrono = { version = "0.4.38", default-features = false, features = ["serde", "std", "iana-time-zone", "now", "alloc"] }
compact_str = { version = "0.8.0", features = ["serde"] }
mimalloc = "0.1.43"
# Maybe use regex-lite
regex = { version = "1.10.6", features = ["use_std"] }
reqwest = { version = "0.12.7", features = ["zstd"] }
reqwest_cookie_store = "0.8.0"
serde = { version = "1.0.210", features = ["derive"] }
serde-aux = "4.5.0"
# Enable runtime-detection for plublishing builds
simd-json = { version = "0.14.0", default-features = false, features = ["serde", "serde_impl"] }
tl = { version = "0.7.8", features = ["simd"] }
tokio = { version = "1.40.0", default-features = true, features = ["full"] }
