cargo-features = ["codegen-backend"]

[package]
name = "tam_intranet"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
chrono = { version = "0.4.38", default-features = false, features = ["serde", "std", "iana-time-zone", "now", "alloc"] }
compact_str = { version = "0.8.0", features = ["serde"] }
cookie_store = "0.21.0"
mimalloc = "0.1.43"
regex-lite = "0.1.6"
serde = { version = "1.0.210", features = ["derive"] }
serde-aux = "4.5.0"
serde_json = "1.0.128"
tl = { version = "0.7.8", features = ["simd"] }
ureq = { version = "2.10.1",  features = ["cookies", "json", "brotli"] }
